--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@sentry/node": "^5.29.2",
+    "@types/node-schedule": "^2.1.0",
     "@types/pino": "^6.3.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
@@ -30,6 +31,7 @@
     "multer": "^1.4.2",
     "mustache": "^4.2.0",
     "mysql2": "^2.2.5",
+    "node-schedule": "^2.1.1",
     "pg": "^8.4.1",
     "pino": "^6.9.0",
     "pino-pretty": "^9.1.1",
