--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.7",
     "antd": "^5.0.7",
+    "array-move": "^4.0.0",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "emoji-mart": "^3.0.1",
@@ -30,6 +31,7 @@
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^6.0.9",
     "recharts": "^2.0.2",
     "rsuite": "^5.23.3",
