--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.0.7",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
+    "dayjs": "^1.11.7",
     "emoji-mart": "^3.0.1",
     "formik": "^2.2.0",
     "i18next": "^19.8.2",
