--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,7 @@ DB_NAME=abbla
 USER_LIMIT=3
 CONNECTIONS_LIMIT=1
 CAMPAIGN_FUNCTION=false
+CHATGPT_API_KEY=
 
 JWT_SECRET=5g1yk7pD9q3YL0iBEuUlPwOiWLj3I5tK+/rhHm+jgdE=
 JWT_REFRESH_SECRET=F2c8gag5nvqQkBOmOu5dWkK+gqZnjPUzHmx7S2tWkvs=
