--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "mustache": "^4.2.0",
     "mysql2": "^2.2.5",
     "node-schedule": "^2.1.1",
+    "openai": "^3.1.0",
     "pg": "^8.4.1",
     "pino": "^6.9.0",
     "pino-pretty": "^9.1.1",
