--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@adiwajshing/baileys": "^5.0.0",
+    "@hapi/boom": "^10.0.1",
     "@sentry/node": "^5.29.2",
     "@types/node-schedule": "^2.1.0",
     "@types/pino": "^6.3.4",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csvtojson": "^2.0.10",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
@@ -49,6 +53,9 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
+    "@ookamiiixd/baileys-store": "^1.0.0-beta.0",
+    "@prisma/client": "^4.11.0",
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.32",
     "@types/cookie-parser": "^1.4.2",
@@ -66,6 +73,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "@types/validator": "^13.1.0",
+    "@types/ws": "^8.5.4",
     "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
