--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,3 +19,5 @@ CHATGPT_API_KEY=
 
 JWT_SECRET=5g1yk7pD9q3YL0iBEuUlPwOiWLj3I5tK+/rhHm+jgdE=
 JWT_REFRESH_SECRET=F2c8gag5nvqQkBOmOu5dWkK+gqZnjPUzHmx7S2tWkvs=
+
+PM2_INDEX=0
