--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=
 BACKEND_URL=http://localhost
+BAILEYS_API_HOST=http://localhost:3030
 FRONTEND_URL=http://localhost:3000
 PORT=8080
 PROXY_PORT=8080
