--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
           SSH_HOST: ${{ secrets.INSTANCE_1_SSH_HOST }}
           SSH_USER: ${{ secrets.INSTANCE_1_SSH_USER }}
           SSH_PASSWORD: ${{ secrets.INSTANCE_1_SSH_PASSWORD }}
-        run: sshpass -p '$SSH_PASSWORD' ssh $SSH_USER@$SSH_HOST < command-to-instance-1.txt # maybe has to remove this '' of ssh_password
+        run: sshpass -p '$SSH_PASSWORD' ssh -tt $SSH_USER@$SSH_HOST < command-to-instance-1.txt # maybe has to remove this '' of ssh_password
