fix: try to fix problem with sudo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
           INSTANCE_1_SSH_HOST: ${{ secrets.INSTANCE_1_SSH_HOST }}
           INSTANCE_1_SSH_USER: ${{ secrets.INSTANCE_1_SSH_USER }}
           INSTANCE_1_SSH_PASSWORD: ${{ secrets.INSTANCE_1_SSH_PASSWORD }}
-        run: sshpass -p $INSTANCE_1_SSH_PASSWORD ssh -tt -o StrictHostKeyChecking=no -x $INSTANCE_1_SSH_USER@$INSTANCE_1_SSH_HOST < command-to-instance-1.sh
+        run: sshpass -p $INSTANCE_1_SSH_PASSWORD ssh -t -o StrictHostKeyChecking=no -x $INSTANCE_1_SSH_USER@$INSTANCE_1_SSH_HOST "sudo -s < command-to-instance-1.sh"
