--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,13 @@ jobs:
       - name: Install sshpass
         run: sudo apt-get install sshpass
 
+      - name: Send messages about pipeline status on Discord
+        if: always()
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: |
+          curl -H "Content-Type: application/json" -X POST -d '{"content":"Iniciando processo de atualização das instancias do Contabo1."}' $DISCORD_WEBHOOK_URL
+
       - name: Execute updates to instance of contabo 1
         env:
           INSTANCE_1_SSH_HOST: ${{ secrets.INSTANCE_1_SSH_HOST }}
@@ -24,9 +31,30 @@ jobs:
           INSTANCE_1_SSH_PASSWORD: ${{ secrets.INSTANCE_1_SSH_PASSWORD }}
         run: echo "$INSTANCE_1_SSH_PASSWORD" | sudo -S sshpass -p $INSTANCE_1_SSH_PASSWORD ssh -tt -o StrictHostKeyChecking=no -x -t $INSTANCE_1_SSH_USER@$INSTANCE_1_SSH_HOST -S sudo < command-to-instance-1.sh
 
+      - name: Send messages about pipeline status on Discord
+        if: always()
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: |
+          curl -H "Content-Type: application/json" -X POST -d '{"content":"Processo de atualização das instancias do Contabo1 completo."}' $DISCORD_WEBHOOK_URL
+
+      - name: Send messages about pipeline status on Discord
+        if: always()
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: |
+          curl -H "Content-Type: application/json" -X POST -d '{"content":"Iniciando processo de atualização das instancias do Contabo2."}' $DISCORD_WEBHOOK_URL
+
       - name: Execute updates to instance of contabo 2
         env:
           INSTANCE_2_SSH_HOST: ${{ secrets.INSTANCE_2_SSH_HOST }}
           INSTANCE_2_SSH_USER: ${{ secrets.INSTANCE_2_SSH_USER }}
           INSTANCE_2_SSH_PASSWORD: ${{ secrets.INSTANCE_2_SSH_PASSWORD }}
         run: echo "$INSTANCE_2_SSH_PASSWORD" | sudo -S sshpass -p $INSTANCE_2_SSH_PASSWORD ssh -tt -o StrictHostKeyChecking=no -x -t $INSTANCE_2_SSH_USER@$INSTANCE_2_SSH_HOST -S sudo < command-to-instance-2.sh
+
+      - name: Send messages about pipeline status on Discord
+        if: always()
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: |
+          curl -H "Content-Type: application/json" -X POST -d '{"content":"Processo de atualização das instancias do Contabo2 completo."}' $DISCORD_WEBHOOK_URL
