--- a/backend/package.json
+++ b/backend/package.json
@@ -48,7 +48,7 @@
     "socket.io": "^3.0.5",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2",
-    "whatsapp-web.js": "^1.23.0",
+    "whatsapp-web.js": "1.23.1-alpha.6",
     "yup": "^0.32.8"
   },
   "devDependencies": {
